--- a/.gitignore
+++ b/.gitignore
@@ -17,20 +17,16 @@ TAGS
 .deps/
 .libs/
 
-/autom4te.cache/
-/bin/wimax-tools-version
-/config.log
-/config.status
-/doc/doxygen.conf
-/doc/html/
-/doc/latex/
-/include/wimax-version.h
-/include/wimaxll-version.h
-/lib/config.h
-/lib/stamp-h1
-/libwimax-0-uninstalled.pc
-/libwimax-0.pc
-/libwimaxll-0-uninstalled.pc
-/libwimaxll-0.pc
-/src/test-dump-pipe
-/src/test-rfkill
+autom4te.cache
+config.log
+config.status
+Makefile.in
+aclocal.m4
+config.guess
+config.h*
+config.sub
+configure
+install-sh
+ltmain.sh
+missing
+stamp-h1
